Work-in-progress support for Java 11.
Note that in this commit, user-defined Java-based types and
operators do not work.