@@ -29,7 +29,7 @@ public class UpdatesCheck {
 	private ProgressBar progressBar;
 
 	private SendWorker sendWorker = null;
-	private Object sendWorkerMutex = new Integer(0);
+	private Object sendWorkerMutex = Integer.valueOf(0);
 
 	public UpdatesCheck(Button btnSend, Label lblProgress, ProgressBar progressBar) {
 		this.display = lblProgress.getDisplay();
